--- a/style.css
+++ b/style.css
@@ -189,7 +189,7 @@ ul {
     .main-title{
         flex-direction: column;
         justify-content: center;
-        padding:1% 0 0 45%
+        padding:0 0 0 70%;
     
     
     }
